# Stencil3D

./: .gitignore  CMakeLists.txt
data/: stencil_permutation.csv
include/: stencil.h  utils.h
script/: bench_stencil.R  bench_stencil.sh
src/: base.c  blocks.c  main.c  original.c  permutation.c  utils.c  vecto.c
